--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -6,7 +6,7 @@ name: 'my_new_project'
 version: '1.0.0'
 config-version: 2
 
-# This setting configures which "profile" dbt uses for this project.
+# This setting configures which "profile" dbt uses for this project
 profile: 'default'
 
 # These configurations specify where dbt should look for different types of files.
@@ -39,4 +39,6 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     example:
+      +materialized: table
+    preprocessing:
       +materialized: table
