--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,5 +40,11 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+    data_models:
+      +materialized: view
     preprocessing:
       +materialized: table
+    db_schema: 
+      +materialized: table
+      post-hook:
+        - "{{ create_indexes(this) }}"
